<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.components.cards.HorizonCardFragment"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="124dp"
            android:layout_height="144dp"
            android:background="@drawable/card_round"
            android:clipToOutline="true"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            android:contentDescription="@string/horizon_card_image"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/hello_blank_fragment"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coba"
            android:background="@drawable/rounded_full"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>