<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ai_match.styling.StylingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentActionBar"
            android:name="com.example.somatchapp.ui.components.TopActionBarFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_actionbar_desc"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:text="@string/styling_page_descriptions"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentActionBar" />

        <ImageView
            android:id="@+id/mannequin_illustration"
            android:layout_width="324dp"
            android:layout_height="480dp"
            android:src="@drawable/ic_mannequin_illustration"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_actionbar_desc"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_outfits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/mannequin_illustration"
            app:layout_constraintBottom_toBottomOf="@id/mannequin_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bag"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/ib_bag"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_card_round"
                    android:clipToOutline="true"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_style"
                    android:contentDescription="@string/bag"
                    app:layout_constraintTop_toBottomOf="@id/tv_bag"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_bottomwear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_bag">

                <TextView
                    android:id="@+id/tv_bottomwear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottomwear"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/ib_bottomwear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_card_round"
                    android:clipToOutline="true"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_style"
                    android:contentDescription="@string/hat"
                    app:layout_constraintTop_toBottomOf="@id/tv_bottomwear"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_topwear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_topwear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topwear"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/ib_topwear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_card_round"
                    android:clipToOutline="true"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_style"
                    android:contentDescription="@string/topwear"
                    app:layout_constraintTop_toBottomOf="@id/tv_topwear"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_accessories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_topwear">

                <TextView
                    android:id="@+id/tv_accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessories"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/ib_accessories"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_card_round"
                    android:clipToOutline="true"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_style"
                    android:contentDescription="@string/hat"
                    app:layout_constraintTop_toBottomOf="@id/tv_accessories"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_footwear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="98dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_accessories">

                <TextView
                    android:id="@+id/tv_footwear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/footwear"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/ib_footwear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_card_round"
                    android:clipToOutline="true"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_style"
                    android:contentDescription="@string/footwear"
                    app:layout_constraintTop_toBottomOf="@id/tv_footwear"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_note_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_outfits" />
        
        <TextView
            android:id="@+id/tv_styling_notes"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:text="@string/styling_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_heading" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/bg_rounded_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_styling_notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>