<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ai_match.ScannerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Header section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ambil_gambar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/arrow_back"
                app:layout_constraintEnd_toStartOf="@id/sync_button"/>

            <ImageView
                android:id="@+id/sync_button"
                android:layout_width="26dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_sync"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/page_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/page_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/scanner_suggestion"
                android:textAlignment="center"
                android:layout_marginTop="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Image section -->
        <androidx.camera.view.PreviewView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:scaleType="fitCenter" />

        <!-- Content section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/button_my_catalog"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="4dp"
                android:clipToOutline="true"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_gallery_button"
                android:src="@drawable/ic_my_catalog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/camera_container"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/camera_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/bg_rounded_full"
                android:backgroundTint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                <ImageButton
                    android:id="@+id/camera_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/camera_button"
                    android:src="@drawable/ic_camera"
                    app:tint="@color/black"
                    android:background="@drawable/bg_camera_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/gallery_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/gallery_button"
                android:src="@drawable/ic_gallery"
                app:tint="@color/black"
                android:background="@drawable/bg_gallery_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/camera_container"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>